<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
 <shortcut android:shortcutId="mvmcmd-qr" android:enabled="true" android:icon="@drawable/mvmcmd_logo" android:shortcutShortLabel="@string/shortcut_qr_short" android:shortcutLongLabel="@string/shortcut_qr_long" android:shortcutDisabledMessage="@string/shortcut_disabled"><intent android:action="android.intent.action.VIEW" android:targetPackage="com.mvmcmd.launcher" android:targetClass="com.mvmcmd.launcher.MainActivity" android:data="mvmcmd://command/qr"/></shortcut>
 <shortcut android:shortcutId="mvmcmd-camera" android:enabled="true" android:icon="@drawable/mvmcmd_logo" android:shortcutShortLabel="@string/shortcut_camera_short" android:shortcutLongLabel="@string/shortcut_camera_long"><intent android:action="android.intent.action.VIEW" android:targetPackage="com.mvmcmd.launcher" android:targetClass="com.mvmcmd.launcher.MainActivity" android:data="mvmcmd://command/camera"/></shortcut>
 <shortcut android:shortcutId="mvmcmd-english" android:enabled="true" android:icon="@drawable/mvmcmd_logo" android:shortcutShortLabel="@string/shortcut_english_short" android:shortcutLongLabel="@string/shortcut_english_long"><intent android:action="android.intent.action.VIEW" android:targetPackage="com.mvmcmd.launcher" android:targetClass="com.mvmcmd.launcher.MainActivity" android:data="mvmcmd://command/english"/></shortcut>
 <shortcut android:shortcutId="mvmcmd-notifications" android:enabled="true" android:icon="@drawable/mvmcmd_logo" android:shortcutShortLabel="@string/shortcut_notify_short" android:shortcutLongLabel="@string/shortcut_notify_long"><intent android:action="android.intent.action.VIEW" android:targetPackage="com.mvmcmd.launcher" android:targetClass="com.mvmcmd.launcher.MainActivity" android:data="mvmcmd://command/notification"/></shortcut>
</shortcuts>
